aligning ingestion flow file model